--- a/templates/signup_login.html
+++ b/templates/signup_login.html
@@ -154,5 +154,15 @@
     password2.addEventListener('input', checkPasswords);
   </script>
 
+<!-- Footer -->
+  <footer id="footerSocials">
+    <ul id="social-networks" class="socials list-unstyled d-flex gap-5 justify-content-center">
+      <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+      <li><a href="https://www.X.com/" target="_blank" rel="noopener" aria-label="visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a></li>
+      <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a></li>
+      <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+    </ul>
+  </footer>
 </body>
+
 </html>
